Added tests (10/12 passing) and finalized functions

--- a/project3/Makefile
+++ b/project3/Makefile
@@ -1,12 +1,19 @@
-.PHONY: all test
+.PHONY: all test clean
 
-TESTS = $(wildcard tests/*.c)
+TESTS = $(wildcard tests/assignment3-test*.c)
 
 PROGS = $(patsubst %.c,%,$(TESTS))
 
+#PASSED = $(grep -c ./tests/results.txt)
+#TESTS = $(wc -l ./tests/results.txt)
+
 all: test
 
+clean:
+	rm -f ./tests/results.txt
+
 test: $(PROGS)
+	@./tests/test-results.sh
 
 %: %.c
 	@./tests/test.sh $<
